; ModuleID = '/home/carl/AnghaBench/freebsd/sys/amd64/vmm/io/extr_vhpet.c_vhpet_timer_ioapic_pin.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/amd64/vmm/io/extr_vhpet.c_vhpet_timer_ioapic_pin.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vhpet = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@HPET_TCNF_INT_ROUTE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.vhpet*, i32)* @vhpet_timer_ioapic_pin to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vhpet_timer_ioapic_pin(%struct.vhpet* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.vhpet*, align 8
  %5 = alloca i32, align 4
  store %struct.vhpet* %0, %struct.vhpet** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load %struct.vhpet*, %struct.vhpet** %4, align 8
  %7 = load i32, i32* %5, align 4
  %8 = call i64 @vhpet_timer_msi_enabled(%struct.vhpet* %6, i32 %7)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %11

10:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %23

11:                                               ; preds = %2
  %12 = load %struct.vhpet*, %struct.vhpet** %4, align 8
  %13 = getelementptr inbounds %struct.vhpet, %struct.vhpet* %12, i32 0, i32 0
  %14 = load %struct.TYPE_2__*, %struct.TYPE_2__** %13, align 8
  %15 = load i32, i32* %5, align 4
  %16 = sext i32 %15 to i64
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i64 %16
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = load i32, i32* @HPET_TCNF_INT_ROUTE, align 4
  %21 = and i32 %19, %20
  %22 = ashr i32 %21, 9
  store i32 %22, i32* %3, align 4
  br label %23

23:                                               ; preds = %11, %10
  %24 = load i32, i32* %3, align 4
  ret i32 %24
}

declare dso_local i64 @vhpet_timer_msi_enabled(%struct.vhpet*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
